--- a/ConfigruleCMFA.yaml
+++ b/ConfigruleCMFA.yaml
@@ -32,52 +32,38 @@ dns:
     - 1.1.1.1
     - 112.215.203.254
 proxies:
-  - name: AKUN1
-    server: quiz.int.vidio.com
-    port: 80
+  - name: ilpedsumatra
+    server: 104.18.53.42
+    port: 443
     type: vmess
-    uuid: 396415b0-6f7d-4df3-9d50-1a3ff9115b1a
+    uuid: cd07423c-b273-4bd1-bf6f-a43d68bd353b
     alterId: 0
     cipher: auto
-    tls: false
-    skip-cert-verify: true
-    servername: id2-ray.ipservers.xyz
-    network: ws
-    ws-opts:
-      path: /JAGOANSSH/
-      headers:
-        Host: id2-ray.ipservers.xyz
-    udp: true
-  - name: AKUN2
-    server: quiz.int.vidio.com
-    port: 443
-    type: vless
-    uuid: 9cf9a9b0-2e2e-45bd-ac6f-5eaa44e30cfe
-    cipher: auto
     tls: true
     skip-cert-verify: true
-    servername: id1vless.ipservers.xyz
+    servername: id.khusus.biz.id
     network: ws
     ws-opts:
-      path: /jagoanssh
+      path: /vmess
       headers:
-        Host: id1vless.ipservers.xyz
+        Host: id.khusus.biz.id
     udp: true
-  - name: AKUN3
-    server: quiz.int.vidio.com
-    port: 443
-    type: vless
-    uuid: aae98731-898a-4cd3-8c7f-d09af2387d63
-    cipher: auto
-    tls: true
-    skip-cert-verify: true
-    servername: id2vless.ipservers.xyz
-    network: ws
-    ws-opts:
-      path: /jagoanssh
-      headers:
-        Host: id2vless.ipservers.xyz
-    udp: true
+  - name: Vmess-Sisemut-WS
+  type: vmess
+  server: s13.indoxray.top
+  port: 443
+  uuid: 7991a372-9c1f-4764-ab8b-cc0f51fcd4b9
+  alterId: 0
+  cipher: auto
+  tls: true
+  skip-cert-verify: true
+  servername: s13.indoxray.top
+  network: ws
+  ws-opts:
+    path: /websocket-vmess
+    headers:
+      Host: s13.indoxray.top
+  udp: true
 
 proxy-groups:
   - name: ID-X
@@ -85,18 +71,16 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - AKUN1
-      - AKUN2
-      - AKUN3
+      - ilpedsumatra
+      - Vmess-Sisemut-WS
 
   - name: MIX-X
     type: fallback
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - AKUN1
-      - AKUN2
-      - AKUN3
+      - ilpedsumatra
+      - Vmess-Sisemut-WS
       
   - name: IKLAN
     type: select
